# CS336-A5

./: .gitignore  CHANGELOG.md  README.md  make_submission.sh  pyproject.toml
cs336_alignment/: __init__.py  run_assistant_sft.py  run_benchmarks.py  run_dpo.py  run_expert_iteration.py  run_grpo.py  run_reasoning_sft.py
cs336_alignment/assistant/: __init__.py  datasets.py  dpo.py  packing.py  preference.py  sft.py  templates.py
cs336_alignment/core/: __init__.py  batching.py  masking.py  scoring.py  tokenization.py  utils.py  vllm_utils.py
cs336_alignment/eval/: __init__.py  alpacaeval.py  generation.py  gsm8k.py  math.py  mmlu.py  parsers.py  safety.py
cs336_alignment/reasoning/: __init__.py  ei.py  grpo_advantage.py  grpo_loss.py  prompts.py  rewards.py  sft.py  train_step.py
cs336_alignment/tests/: __init__.py
data/: math-distilled
data/alpaca_eval_hf/: alpaca_eval_all_outputs.json  alpaca_eval_annotations_alpaca_eval_gpt4.json  alpaca_eval_annotations_claude.json  alpaca_farm_human_annotations.json
data/alpaca_eval_hf/.hfd/: repo_metadata.json
data/gsm8k/: test.json  test.jsonl  train.json  train.jsonl
data/simple_safety_tests/: README.md  sst_test_cases.csv
docs/: 01-gsm8k-batch-generation.md  02-sft-data-preprocess.md  03-math-evaluation.md  03-sft-trd.md  04-ei-trd.md  05-grpo-trd.md  PROGRESS.md
scripts/: check_rollout_diversity.py  distill_math.py  distill_rlvr_math.py  evaluate_rlvr_baseline.py  evaluate_tulu_baseline.py  prepare_sft_data.py
slurm/: run_expert_iteration.slurm  run_grpo.slurm  run_sft.slurm
tests/: adapters.py
(+7 files in other folders)
