[project]
name = "cs336_alignment"
version = "1.0.0"
description = "CS336 Spring 2025 Assignment 5: Alignment (SFT, Expert Iteration, GRPO)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.44.0",
    "vllm>=0.8.0",
    "numpy",
    "tqdm",
    "wandb",
    "einops",
    "pytest",
    "matplotlib",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cs336_alignment"
module-root = ""

[tool.uv]
package = true
python-preference = "managed"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "E501"]
